--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,7 +4,17 @@
 
 @theme static {
   --font-sans: 'Public Sans', sans-serif;
-
   --breakpoint-3xl: 1920px;
 }
 
+:root {
+  --ui-container: 90rem;
+  --ui-primary: #9810fa;
+  --ui-text: #ffffff;
+  --ui-text-muted: #ffffff;
+}
+
+/* .dark {
+  --ui-bg: var(--ui-color-neutral-950);
+  --ui-border: var(--ui-color-neutral-900);
+} */
